--- a/Ecommerce_project/src/main/resources/application.properties
+++ b/Ecommerce_project/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 #swagger-ui
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+logging.level.my.package.name=DEBUG
